--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<!-- Header -->
 				<section id="header" class="skel-layers-fixed">
 					<header>
-						<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+						<span class="image avatar"><img src="images/crest (1).jpg" alt="" /></span>
 						<h1 id="logo"><a href="#">Theta Delta Chi</a></h1>
 						<p>Theta Deuteron Charge</p>
 					</header>
@@ -75,7 +75,15 @@
 						<section id="two">
 							<div class="container">
 								<h3>Pricing</h3>
-								<p>Our housing prices make living at Theta Delta Chi one of the most affordable living situations possible. Rates are for the entire summer.</p>
+								<p>Our housing prices make living at Theta Delta Chi one of the most affordable living situations possible. Rates are for the entire summer.
+                                
+                                <ul>
+                                  <li>Singles: $1900</li>
+                                  <li>Doubles: $1700</li>
+                                  <li>Triples: $1500</li>
+                                  <li>Quads: $1400</li>
+                                </ul>
+                                </p>
 								
 							</div>
 						</section>
@@ -115,7 +123,8 @@
 						<section id="four">
 							<div class="container">
 								<h3>Contact</h3>
-								<p>To set up your summer housing, please email us using the form below or by emailing tdc-summer@mit.edu.</p>
+								<p>To set up your summer housing, please email us at tdc-summer@mit.edu.</p>
+<!--
 								<form method="post" action="#">
 									<div class="row uniform">
 										<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -136,6 +145,7 @@
 										</div>
 									</div>
 								</form>
+-->
 							</div>
 						</section>
 				</div>
