--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<!-- Header -->
 				<section id="header" class="skel-layers-fixed">
 					<header>
-						<span class="image avatar"><img src="images/crest (1).jpg" alt="" /></span>
+						<span class="image avatar"><img src="images/crest.jpg" alt="" /></span>
 						<h1 id="logo"><a href="#">Theta Delta Chi</a></h1>
 						<p>Theta Deuteron Charge</p>
 					</header>
@@ -123,7 +123,7 @@
 						<section id="four">
 							<div class="container">
 								<h3>Contact</h3>
-								<p>To set up your summer housing, please email us at tdc-summer@mit.edu.</p>
+								<p>To set up your summer housing, please email us at tdc-junior-exec@mit.edu.</p>
 <!--
 								<form method="post" action="#">
 									<div class="row uniform">
