--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<!-- Header -->
 				<section id="header" class="skel-layers-fixed">
 					<header>
-						<span class="image avatar"><img src="images/crest.jpg" alt="" /></span>
+						<span class="image avatar"><img src="images/crest.png" alt="" /></span>
 						<h1 id="logo"><a href="#">Theta Delta Chi</a></h1>
 						<p>Theta Deuteron Charge</p>
 					</header>
@@ -50,7 +50,7 @@
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 -->
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:tdc-junior-exec@mit.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</footer>
 				</section>
@@ -67,7 +67,13 @@
 									memorable brothers</p>
 								</header>
                                 <!--house culture (music, awesome shit, building), safety with mit campus, roofdecks for the lulz, location, list ammenities-->
-								<p>Theta Delta Chi is located at 372 Memorial Drive alongside the Charles River. TDC is a great place to live for a multitude of reasons:</p>
+								<p>Theta Delta Chi is located on MIT's campus, at 372 Memorial Drive alongside the Charles River. TDC is a great place to live for a multitude of reasons:
+                                <ul>
+                                <li><b>Location</b> - TDC is the closest fraternity to MIT campus, so you can sleep in a little more and get to lab or the 1 bus faster.</li>
+                                    <li><b>House culture</b> - Our brotherhood is quite eclectic and unique. Whether you like to jam with others, paint murals, watch movies, or talk about physics and philosophy, you'll find someone to hang out with.</li>
+                                    <li><b>Safety</b> - MIT campus is monitored by MIT Police 24/7, so you can ensure peace of mind with us.</li>
+                                    <li><b>Roofdecks</b> - We have three roofdecks and a balcony facing the river that allow for beautiful breezes and summertime relaxation.</li>
+                                </ul></p>
 							</div>
 						</section>
 
@@ -92,29 +98,45 @@
 						<section id="three">
 							<div class="container">
 								<h3>Pictures</h3>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+								<p>TDC's facilities and common spaces are lahblahblah</p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/diningroom.png" alt="" /></a>
 										<div class="inner">
-											<h4>Possibly broke spacetime</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<h4>Dining Room</h4>
+											<p>Our newly painted dining room provides a great place to eat meals with other residents and hold meetings.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/formalroom.png" alt="" /></a>
 										<div class="inner">
-											<h4>Terraformed a small moon</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<h4>Formal Room</h4>
+											<p>Our formal room is home to our trophies and awards, a pool table, a piano, and a lounge space.</p>
 										</div>
 									</article>
 									<article>
+										<a href="#" class="image"><img src="images/kitchen.png" alt="" /></a>
+										<div class="inner">
+											<h4>Kitchen</h4>
+											<p>Our kitchen has three freezers, two refrigerators, six burners and two ovens along with industrial sinks and a coffee maker.</p>
+										</div>
+									</article>
+<!--
+                                    									                                     <article>
 										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Snapped dark matter in the wild</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
+                                    									                                     <article>
+										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Snapped dark matter in the wild</h4>
+											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+										</div>
+									</article>
+-->
 								</div>
 							</div>
 						</section>
@@ -123,7 +145,7 @@
 						<section id="four">
 							<div class="container">
 								<h3>Contact</h3>
-								<p>To set up your summer housing, please email us at tdc-junior-exec@mit.edu.</p>
+								<p>To set up your summer housing, or if you have any questions about the house, please email us at tdc-junior-exec@mit.edu.</p>
 <!--
 								<form method="post" action="#">
 									<div class="row uniform">
