--- a/index.html
+++ b/index.html
@@ -98,24 +98,24 @@
 						<section id="three">
 							<div class="container">
 								<h3>Pictures</h3>
-								<p>TDC's facilities and common spaces are lahblahblah</p>
+								<p>Take a 'tour' of our house without leaving your spot by scrolling down! </p>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/diningroom.png" alt="" /></a>
+										<a class="image"><img src="images/diningroom.png" alt="" /></a>
 										<div class="inner">
 											<h4>Dining Room</h4>
 											<p>Our newly painted dining room provides a great place to eat meals with other residents and hold meetings.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/formalroom.png" alt="" /></a>
+										<a class="image"><img src="images/formalroom.png" alt="" /></a>
 										<div class="inner">
 											<h4>Formal Room</h4>
 											<p>Our formal room is home to our trophies and awards, a pool table, a piano, and a lounge space.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/kitchen.png" alt="" /></a>
+										<a class="image"><img src="images/kitchen.png" alt="" /></a>
 										<div class="inner">
 											<h4>Kitchen</h4>
 											<p>Our kitchen has three freezers, two refrigerators, six burners and two ovens along with industrial sinks and a coffee maker.</p>
@@ -123,14 +123,14 @@
 									</article>
 <!--
                                     									                                     <article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<a class="image"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Snapped dark matter in the wild</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
                                     									                                     <article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<a class="image"><img src="images/pic03.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Snapped dark matter in the wild</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
