--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
 								<p>Take a 'tour' of our house without leaving your spot by scrolling down! </p>
 								<div class="features">
 									<article>
-										<a class="image"><img src="images/diningroom.png" alt="" /></a>
+										<a class="image"><img src="https://dl.dropboxusercontent.com/s/659jl27ljqjgjzw/diningroom.png" alt="" /></a>
 										<div class="inner">
 											<h4>Dining Room</h4>
 											<p>Our newly painted dining room provides a great place to eat meals with other residents and hold meetings.</p>
 										</div>
 									</article>
 									<article>
-										<a class="image"><img src="images/formalroom.png" alt="" /></a>
+										<a class="image"><img src="https://dl.dropboxusercontent.com/s/5fuh6y8vccjs7me/formalroom.png" alt="" /></a>
 										<div class="inner">
 											<h4>Formal Room</h4>
 											<p>Our formal room is home to our trophies and awards, a pool table, a piano, and a lounge space.</p>
 										</div>
 									</article>
 									<article>
-										<a class="image"><img src="images/kitchen.png" alt="" /></a>
+										<a class="image"><img src="https://dl.dropboxusercontent.com/s/598bo1shw8gnwvr/kitchen.png" alt="" /></a>
 										<div class="inner">
 											<h4>Kitchen</h4>
 											<p>Our kitchen has three freezers, two refrigerators, six burners and two ovens along with industrial sinks and a coffee maker.</p>
