--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 					<div class="container">
 						<ul class="copyright">
 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                            <li>Slapped together by: <a href="mailto:sarivera@mit.edu">sarivera</a></li>
 						</ul>
 					</div>
 				</section>
