--- a/index.html
+++ b/index.html
@@ -121,22 +121,20 @@
 											<p>Our kitchen has three freezers, two refrigerators, six burners and two ovens along with industrial sinks and a coffee maker.</p>
 										</div>
 									</article>
-<!--
                                     									                                     <article>
-										<a class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<a class="image"><img src="https://dl.dropboxusercontent.com/s/4nuoguo7abzh5kr/mural.png" alt="" /></a>
 										<div class="inner">
-											<h4>Snapped dark matter in the wild</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<h4>Murals</h4>
+											<p>TDC has many beautiful murals throughout it's walls, left as reminders of brothers who have lived here before.</p>
 										</div>
 									</article>
                                     									                                     <article>
-										<a class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<a class="image"><img src="" alt="https://dl.dropboxusercontent.com/s/ihpwxaxne8xhpox/front.png" /></a>
 										<div class="inner">
-											<h4>Snapped dark matter in the wild</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<h4>The Mansion</h4>
+											<p>TDC has four floors, making for a total of 19 rooms.</p>
 										</div>
 									</article>
--->
 								</div>
 							</div>
 						</section>
