--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 						<section id="four">
 							<div class="container">
 								<h3>Contact</h3>
-								<p>To set up your summer housing, or if you have any questions about the house, please email us at tdc-junior-exec@mit.edu.</p>
+								<p>To set up your summer housing, or if you have any questions, please email us at <a href='mailto:tdc-junior-exec@mit.edu'>tdc-junior-exec@mit.edu</a>.</p>
 <!--
 								<form method="post" action="#">
 									<div class="row uniform">
