--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 										</div>
 									</article>
                                     									                                     <article>
-										<a class="image"><img src="" alt="https://dl.dropboxusercontent.com/s/ihpwxaxne8xhpox/front.png" /></a>
+										<a class="image"><img src="https://dl.dropboxusercontent.com/s/ihpwxaxne8xhpox/front.png" alt="" /></a>
 										<div class="inner">
 											<h4>The Mansion</h4>
 											<p>TDC has four floors, making for a total of 19 rooms.</p>
