--- a/index.html
+++ b/index.html
@@ -101,35 +101,35 @@
 								<p>Take a 'tour' of our house without leaving your spot by scrolling down! </p>
 								<div class="features">
 									<article>
-										<a class="image"><img src="https://dl.dropboxusercontent.com/s/659jl27ljqjgjzw/diningroom.png" alt="" /></a>
+										<a href='https://www.dropbox.com/s/3gghi6tb5cqngu8/diningroom-l.png' class="image"><img src="https://dl.dropboxusercontent.com/s/659jl27ljqjgjzw/diningroom.png" alt="" /></a>
 										<div class="inner">
 											<h4>Dining Room</h4>
 											<p>Our newly painted dining room provides a great place to eat meals with other residents and hold meetings.</p>
 										</div>
 									</article>
 									<article>
-										<a class="image"><img src="https://dl.dropboxusercontent.com/s/5fuh6y8vccjs7me/formalroom.png" alt="" /></a>
+										<a href='https://www.dropbox.com/s/dugh2u3drkegibc/formalroom-l.png' class="image"><img src="https://dl.dropboxusercontent.com/s/5fuh6y8vccjs7me/formalroom.png" alt="" /></a>
 										<div class="inner">
 											<h4>Formal Room</h4>
 											<p>Our formal room is home to our trophies and awards, a pool table, a piano, and a lounge space.</p>
 										</div>
 									</article>
 									<article>
-										<a class="image"><img src="https://dl.dropboxusercontent.com/s/598bo1shw8gnwvr/kitchen.png" alt="" /></a>
+										<a href='https://www.dropbox.com/s/4ad4au5g79wltut/kitchen-l.png' class="image"><img src="https://dl.dropboxusercontent.com/s/598bo1shw8gnwvr/kitchen.png" alt="" /></a>
 										<div class="inner">
 											<h4>Kitchen</h4>
 											<p>Our kitchen has three freezers, two refrigerators, six burners and two ovens along with industrial sinks and a coffee maker.</p>
 										</div>
 									</article>
                                     									                                     <article>
-										<a class="image"><img src="https://dl.dropboxusercontent.com/s/4nuoguo7abzh5kr/mural.png" alt="" /></a>
+										<a href='https://www.dropbox.com/s/ek4u0t4024m4bsj/mural-l.png' class="image"><img src="https://dl.dropboxusercontent.com/s/4nuoguo7abzh5kr/mural.png" alt="" /></a>
 										<div class="inner">
 											<h4>Murals</h4>
 											<p>TDC has many beautiful murals throughout it's walls, left as reminders of brothers who have lived here before.</p>
 										</div>
 									</article>
                                     									                                     <article>
-										<a class="image"><img src="https://dl.dropboxusercontent.com/s/ihpwxaxne8xhpox/front.png" alt="" /></a>
+										<a href='https://www.dropbox.com/s/bhobfobldpw7pai/front-l.png' class="image"><img src="https://dl.dropboxusercontent.com/s/ihpwxaxne8xhpox/front.png" alt="" /></a>
 										<div class="inner">
 											<h4>The Mansion</h4>
 											<p>TDC has four floors, making for a total of 19 rooms.</p>
