--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 -->
-							<li><a href="mailto:tdc-junior-exec@mit.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="mailto:summer@mit.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</footer>
 				</section>
@@ -143,7 +143,7 @@
 						<section id="four">
 							<div class="container">
 								<h3>Contact</h3>
-								<p>To set up your summer housing, or if you have any questions, please email us at <a href='mailto:tdc-junior-exec@mit.edu'>tdc-junior-exec@mit.edu</a>.</p>
+								<p>To set up your summer housing, or if you have any questions, please email us at <a href='mailto:summer@mit.edu'>summer@mit.edu</a>.</p>
 <!--
 								<form method="post" action="#">
 									<div class="row uniform">
